[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/NoteA1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SaxophoneAttack.gd" type="Script" id=2]

[node name="SaxophoneAttack" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="Note1" parent="." instance=ExtResource( 1 )]
position = Vector2( 287.35, -31.4289 )

[node name="Note2" parent="." instance=ExtResource( 1 )]
position = Vector2( 136.94, -172.859 )
[connection signal="tree_exited" from="Note1" to="." method="_on_Note1_tree_exited"]
[connection signal="tree_exited" from="Note2" to="." method="_on_Note2_tree_exited"]
